# spacy-alignments

./: .gitignore  Cargo.toml  LICENSE  MANIFEST.in  README.md  azure-pipelines.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: cibuildwheel.yml  publish_pypi.yml  tests.yml
spacy_alignments/: __init__.pyi
spacy_alignments/tests/: test_main.py
src/: lib.rs
