[metadata]
description = A spaCy package for the Rust tokenizations library
long_description = file: README.md
long_description_content_type = text/markdown
author = Explosion
author_email = contact@explosion.ai
url = https://github.com/explosion/spacy-alignments
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Programming Language :: Rust
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
zip_safe = false
include_package_data = true
python_requires = >=3.6
setup_requires =
    setuptools-rust

[bdist_wheel]
universal = false

[sdist]
formats = gztar
